--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -19,7 +19,7 @@
               Aaron
             </a>
           </span>
-           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with co-incidence, an experimental music residency which kicked off it's first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival/residency focused on experimental music and built as an experimental composer might build a piece.
+           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with the co-incidence festival which kicked off it's first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival focused on experimental music and built as an experimental composer might build a piece.
            <br />
            <br />
            You can check out our article in the
@@ -31,7 +31,7 @@
       </div>
       <div class="col-lg-4 col-lg-offset-4 text-center">
         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-        <p>Please feel free to reach out: <a href="mailto:coincidence.residency@gmail.com">coincidence.residency@gmail.com</a></p>
+        <p>Please feel free to reach out: <a href="mailto:coincidence.residency@gmail.com">coincidence.festival@gmail.com</a></p>
       </div>
     </div>
   </div>
