--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="text-faded">
-          Fill out your application here. We are most interested in your project proposal for the Residency. Our main advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material that will give us a better chance to get to know you as an artist.
+          Fill out your application here. We are most interested in your project proposal for the festival. Our main advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material that will give us a better chance to get to know you as an artist.
         </p>
       </div>
       <!-- <div class="col-md-6 text-center">
@@ -162,7 +162,7 @@
             Proposal
           </h3>
           <p class="text-faded small-text">
-            Give us an idea of the work that you propose to compose for the Residency. Anything from a text description to a draft of a score will do just fine. This will be the work that you will bring - completed - to the Residency to workshop and perform, and also as a means for starting discussion among the group.
+            Give us an idea of the work that you propose to compose for the festival. Anything from a text description to a draft of a score will do just fine. This will be the work that you will bring - completed - to the festival to workshop and perform, and also as a means for starting discussion among the group.
           </p>
           <p class="text-faded small-text">
             Please bear in mind that the work you will be proposing will be workshopped and performed by the co-incidence ensemble, i.e., the other guest artists, resident artist, directors, and potentially members of the local community (at least 9 people: 6 guest artists, 1 resident artist, 2 directors). Moreover, you will have the opportunity to have your work performed on Sunday for an extended duration as the final performance is for an undetermined length of time. We imagine works lasting anywhere from, though not limited to, an hour, 2 hours, 3 hours, 4 hours, etc.
