--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          <!-- While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three performances at Washington Street Gallery: -->
+          <!-- While most of this will be determined by the Artists, we do have a few 'fixed points' during the festival. Namely, three performances at Washington Street Gallery: -->
           There will be three performances at Washington Street Gallery
         </p>
       </div>
@@ -50,7 +50,7 @@
           </h5>
         </div>
         <div class="text">
-          This will feature (six) solo pieces/sets by all of the co-incidence Guest Artists. While we will get to know one another, and the local community, through other means throughout the residency, this provides a uniquely personal way to understand and be in contact with the co-incidence artists.
+          This will feature (six) solo pieces/sets by all of the co-incidence Guest Artists. While we will get to know one another, and the local community, through other means throughout the festival, this provides a uniquely personal way to understand and be in contact with the co-incidence artists.
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          In addition to these events, the co-incidence artists will be at Washington Street Gallery morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flexible framework that can be altered during the residency by the artists as they (we) see fit.
+          In addition to these events, the co-incidence artists will be at Washington Street Gallery morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flexible framework that can be altered during the festival by the artists as they (we) see fit.
         </p>
       </div>
     </div>
