--- a/app/views/home/sections/_hero.html.erb
+++ b/app/views/home/sections/_hero.html.erb
@@ -2,7 +2,7 @@
   <div class="header-content">
     <div class="header-content-inner">
       <h1 id="homeHeading">
-        (the) co-incidence residency
+        (the) co-incidence festival
       </h1>
       </hr>
       <p>
