--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -132,7 +132,7 @@ personel SECTION
           </li>
           <li>
             <p>
-              The Community: this residency is entirely open-door. Members of the community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
+              The Community: this festival is entirely open-door. Members of the community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
             </p>
           </li>
         </ul>
