--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>co-incidence residency</title>
+  <title>co-incidence festival</title>
 
   <%= favicon_link_tag 'co-incidenceLogo.png', type: 'image/png' %>
 
