--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,15 +6,15 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          <i>co-incidence, an experimental music residency </i>is a gathering of experimental composer-performers for six days hosted by Non-Event at Washington Street Gallery in Somerville, MA.
+          <i>the co-incidence festival </i>is a gathering of experimental composer-performers for six days hosted by Non-Event at Washington Street Gallery in Somerville, MA.
         </p>
         <hr class="light">
         <p class="text-faded">
-          This project is based on an expanded view of what constitutes art, music, and the traditional concert. Following the example of the revolutionary arts community Black Mountain College, it will bring together a group of radical artists operating in the boundary-zones of their practice to take part in a residency curated as ‘social sculpture.’ Reflecting the values of experimental music, co-incidence will be allowed to grow organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and loose framework. There will be encouraged but not required peer-to-peer meetings between artists in lieu of official lessons, the people attending will not be labeled as student or faculty.
+          This project is based on an expanded view of what constitutes art, music, and the traditional concert. Following the example of the revolutionary arts community Black Mountain College, it will bring together a group of radical artists operating in the boundary-zones of their practice to take part in a festival curated as ‘social sculpture.’ Reflecting the values of experimental music, co-incidence will be allowed to grow organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and loose framework. There will be encouraged but not required peer-to-peer meetings between artists in lieu of official lessons, the people attending will not be labeled as student or faculty.
         </p>
         <br />
         <p class="text-faded">
-          The residency is tuition free. Housing and food are not provided (besides a welcome dinner, and all meals on Sunday the 29th). To offset this cost, we are giving a $400 stipend to each guest artist. We estimate housing and food costs to be between $500 and $600. Upon acceptance, we will assist as possible in finding accommodations and providing recommendation letters for grants.
+          The festival is tuition free. Housing and food are not provided (besides a welcome dinner, and all meals on Sunday the 29th). To offset this cost, we are giving a $400 stipend to each guest artist. We estimate housing and food costs to be between $500 and $600. Upon acceptance, we will assist as possible in finding accommodations and providing recommendation letters for grants.
         </p>
         <br />
         <p class="text-faded">
@@ -25,7 +25,7 @@
           Please see a description of our collaborators, the application, and further details below.
         </p>
         <p class="text-faded">
-          If you have any questions, please email us at: <a href="mailto:coincidence.residency@gmail.com">coincidence.residency@gmail.com</a>.
+          If you have any questions, please email us at: <a href="mailto:coincidence.residency@gmail.com">coincidence.festival@gmail.com</a>.
         </p>
       </div>
     </div>
