--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
       <a class="navbar-brand page-scroll" href="/" style="color: #222">
-        co-incidence residency
+        co-incidence festival
       </a>
     </div>
 
