move michael to 2017 artist section

--- a/app/views/home/sections/_guest_artists.html.erb
+++ b/app/views/home/sections/_guest_artists.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-faded">
-          2017 GUEST ARTISTS
+          2017 ARTISTS
         </h2>
       </div>
     </div>
@@ -11,6 +11,46 @@
   <br />
   <br />
   <div class="container guest-artists">
+
+      <!-- michael P -->
+      <div class="row guest-artist-row">
+        <div class="col-xs-12 col-sm-3">
+          <div class="guest-artist-img">
+            <%= image_tag asset_url("with_cocoa.jpg")%>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Michael Pisaro (Resident Artist)", "http://michaelpisaro.blogspot.com//", :target => "_blank" ) %>
+
+          </h4>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs">
+          <p class="text-faded">
+            Born in Buffalo in 1961, Michael Pisaro is a composer and guitarist, a member of the Wandelweiser Composers Ensemble and founder and director of the Experimental Music Workshop, Calarts.
+            </br>
+            </br>
+            His work is frequently performed in the U.S. and in Europe, in music festivals and in many smaller venues.
+            </br>
+            </br>
+            It has been selected twice by the ISCM jury for performance at World Music Days festivals (Copenhagen,1996; Manchester, 1998) and has also been part of festivals in Hong Kong (ICMC, 1998), Vienna (Wien Modern,1997), Aspen (1991), London (Cutting Edge, 2007), Glasgow (INSTAL 2009), Huddersfield (2009), Chicago (New Music Chicago, 1990, 1991) and elsewhere.
+            </br>
+            </br>
+            He has had extended composer residencies in Germany (Künstlerhof Schreyahn, Dortmund University), Switzerland (Forumclaque/Baden), Israel (Miskenot Sha'ananmim), Greece (EarTalk) and in the U.S. (Birch Creek Music Festival, Wisconsin). 
+            </br>
+            </br>
+            Concert length portraits of his music have been given in Munich, Jerusalem, Los Angeles, Vienna, Merano (Italy), Brussels, New York, Curitiba (Brazil), Amsterdam, London, Tokyo, Austin, Berlin, Chicago, Düsseldorf, Zürich, Cologne, Aarau (Switzerland), and elsewhere.
+            </br>
+            </br>
+            He is a Foundation for Contemporary Arts, 2005 and 2006 Grant Recipient. 
+            </br>
+            </br>
+            Most of his music of the last several years is published by Edition Wandelweiser (Germany).
+          </p>
+        </div>
+      </div>
+
+      <hr class="secondary">
 
       <!-- ben -->
       <div class="row guest-artist-row">
