--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+      <div class="col-lg-6 col-md-6 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
           <h4>
@@ -43,7 +43,7 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+      <div class="col-lg-6 col-md-6 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
           <h4>
@@ -62,6 +62,7 @@
           </p>
         </div>
       </div>
+      <!--
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
@@ -69,7 +70,7 @@
             Resident Artist
           </h4>
           <div class="details-pic">
-            <%= image_tag asset_url("with_cocoa.jpg") %>
+            <%#= image_tag asset_url("with_cocoa.jpg") %>
           </div>
           <p class="text-muted partner-link">
             <a href="http://michaelpisaro.blogspot.com//">
@@ -92,6 +93,7 @@
           </p>
         </div>
       </div>
+    -->
     </div>
   </div>
 </section>
