--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -13,6 +13,10 @@
   background-color: #eee;
 }
 
+#who {
+  background-color: white;
+}
+
 #application, #guest-artists {
   background-color: #337ab7;
 }
