--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,11 @@
 <%= render 'home/sections/hero' %>
 <%= render 'home/sections/description' %>
-<%= render 'home/sections/who' %>
-<%#= render 'home/sections/details' %>
+
+<%= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
 <!-- <hr style="max-width: inherit"> -->
 <%#= render 'home/sections/application' %>
 <%= render 'home/sections/guest_artists' %>
+<%= render 'home/sections/who' %>
 <%= render 'home/sections/about' %>
 <%= render 'home/sections/logos' %>
