--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -1,3 +1,118 @@
+<section id="who">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">
+          SELCECTED MEDIA
+        </h2>
+        <hr class="primary">
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-lg-12">
+        <p>
+          Please go check out all of our other music on our <a href="https://www.youtube.com/channel/UC9egQPNlTDLl_kZ36Sl2X3A" target="_blank"> YouTube </a> or our <a href="https://soundcloud.com/co-incidence-festival" target="_blank"> soundCloud </a>.
+        </p>
+      </div>
+    </div>
+  </div>
+  <br />
+  <br />
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/dYARbjlU7CY" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=dYARbjlU7CY" target="_blank">
+          <h3>
+            Beings, Heat and Cold (Part II)
+          </h3>
+        </a>
+        <b>Michael Pisaro</b>
+        <p>
+          Sunday,
+          All-Day Performance
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/efhLWh0GQzg" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=efhLWh0GQzg" target="_blank">
+          <h3>
+            In 1839 it was considered elegant to take a tortoise out walking
+          </h3>
+        </a>
+        <b>Carolyn Chen</b>
+        <p>
+          Sunday,
+          All-Day Performance
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/_VzMXRXCl9E" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=_VzMXRXCl9E" target="_blank">
+          <h3>
+            Untitled
+          </h3>
+        </a>
+        <b>Sarah Pitan</b>
+        <p>
+          Friday, Guest Artist Showcase Performance]
+        </p>
+      </div>
+    </div>
+    <br />
+    <br />
+    <div class="row text-center">
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/50dz695QRq0" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=50dz695QRq0" target="_blank">
+          <h3>
+            Forever Moving Lines
+          </h3>
+        </a>
+        <b>Chris Williams</b>
+        <p>
+          Sunday,
+          All-Day Performance
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/D7ns97wevaY" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=D7ns97wevaY" target="_blank">
+          <h3>
+            Constructed Objects
+          </h3>
+        </a>
+        <b>Morgan Evans-Weiler</b>
+        <p>
+          Tuesday, Welcome to Boston Concert
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/clt-s-E0XKY" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=clt-s-E0XKY" target="_blank">
+          <h3>
+            Inhabit (for PO)
+          </h3>
+        </a>
+        <b>Mike Bullock</b>
+        <p>
+          Sunday,
+          All-Day Performance
+        </p>
+      </div>
+    </div>
+  </div>
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+</div>
+
+
 <!-- 
 
 personel SECTION 
@@ -98,7 +213,7 @@ personel SECTION
   </div>
 </section>
 
--->
+
 
 <section id="who">
   <div class="container">
@@ -140,3 +255,4 @@ personel SECTION
     </div>
   </div>
 </section>
+-->
