--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          SELCECTED MEDIA
+          SELECTED MEDIA
         </h2>
         <hr class="primary">
       </div>
