--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,9 @@
 <%= render 'home/sections/partners' %>
 <!-- <hr style="max-width: inherit"> -->
 <%#= render 'home/sections/application' %>
-<%= render 'home/sections/guest_artists' %>
-<%= render 'home/sections/who' %>
+
+<%#= render 'home/sections/guest_artists' %>
+<%#= render 'home/sections/who' %>
+
 <%= render 'home/sections/about' %>
 <%= render 'home/sections/logos' %>
