--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -20,8 +20,10 @@
   </div>
   <br />
   <br />
+  <br />
   <div class="container">
-    <div class="row text-center">
+    <div class="row text-center"
+      styles="height: 350px;">
       <div class="col-lg-4">
         <iframe width="280" height="158" src="https://www.youtube.com/embed/dYARbjlU7CY" frameborder="0" allowfullscreen></iframe>
         <a href="https://www.youtube.com/watch?v=dYARbjlU7CY" target="_blank">
@@ -30,9 +32,13 @@
           </h3>
         </a>
         <b>Michael Pisaro</b>
+        <p style="margin-bottom: 0;">
+          Sunday, All-Day Performance
+        </p>
         <p>
-          Sunday,
-          All-Day Performance
+          <a href="https://soundcloud.com/co-incidence-festival/michaelpisaro-sundayconcert?in=co-incidence-festival/sets/2017-co-incidence-festival" target="_blank" class="reddish">
+            listen
+          </a>
         </p>
       </div>
       <div class="col-lg-4">
@@ -43,9 +49,13 @@
           </h3>
         </a>
         <b>Carolyn Chen</b>
+        <p style="margin-bottom: 0;">
+          Sunday, All-Day Performance
+        </p>
         <p>
-          Sunday,
-          All-Day Performance
+          <a href="https://soundcloud.com/co-incidence-festival/carolynchen-sundayconcert?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
         </p>
       </div>
       <div class="col-lg-4">
@@ -56,14 +66,20 @@
           </h3>
         </a>
         <b>Sarah Pitan</b>
+        <p style="margin-bottom: 0;">
+          Friday, Guest Artist Showcase Performance
+        </p>
         <p>
-          Friday, Guest Artist Showcase Performance]
+          <a href="https://soundcloud.com/co-incidence-festival/sarah-pitan-e4773098889037?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
         </p>
       </div>
     </div>
     <br />
     <br />
-    <div class="row text-center">
+    <div class="row text-center"
+      styles="height: 350px;">
       <div class="col-lg-4">
         <iframe width="280" height="158" src="https://www.youtube.com/embed/50dz695QRq0" frameborder="0" allowfullscreen></iframe>
         <a href="https://www.youtube.com/watch?v=50dz695QRq0" target="_blank">
@@ -72,11 +88,16 @@
           </h3>
         </a>
         <b>Chris Williams</b>
+        <p style="margin-bottom: 0;">
+          Sunday, All-Day Performance
+        </p>
         <p>
-          Sunday,
-          All-Day Performance
+          <a href="https://soundcloud.com/co-incidence-festival/chris-williams-forever-moving-lines?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
         </p>
       </div>
+
       <div class="col-lg-4">
         <iframe width="280" height="158" src="https://www.youtube.com/embed/D7ns97wevaY" frameborder="0" allowfullscreen></iframe>
         <a href="https://www.youtube.com/watch?v=D7ns97wevaY" target="_blank">
@@ -85,10 +106,16 @@
           </h3>
         </a>
         <b>Morgan Evans-Weiler</b>
-        <p>
+        <p style="margin-bottom: 0;">
           Tuesday, Welcome to Boston Concert
         </p>
+        <p>
+          <a href="https://soundcloud.com/co-incidence-festival/morgan-evans-weiler-constructed-objects?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
+        </p>
       </div>
+      
       <div class="col-lg-4">
         <iframe width="280" height="158" src="https://www.youtube.com/embed/clt-s-E0XKY" frameborder="0" allowfullscreen></iframe>
         <a href="https://www.youtube.com/watch?v=clt-s-E0XKY" target="_blank">
@@ -97,16 +124,75 @@
           </h3>
         </a>
         <b>Mike Bullock</b>
+        <p style="margin-bottom: 0;">
+          Sunday, All-Day Performance
+        </p>
         <p>
-          Sunday,
-          All-Day Performance
+          <a href="https://soundcloud.com/co-incidence-festival/mike-bullock-inhabit-for-po?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
+        </p>
+      </div>
+    </div>
+    <br />
+    <br />
+    <div class="row text-center"
+      styles="height: 350px;">
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/LLjCKQIf6Ms" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=LLjCKQIf6Ms" target="_blank">
+          <h3>
+            Grouper Interview - Conducted by D-Bo (2009)
+          </h3>
+        </a>
+        <b>Ben Levinson</b>
+        <p style="margin-bottom: 0;">
+          Friday, Guest Artist Showcase Performance
+        </p>
+        <p>
+          <a href="https://soundcloud.com/co-incidence-festival/ben-levinson-the-textbook-of-inertia-excerpt-13400-23400?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
+        </p>
+      </div>
+
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/96FF752lGZQ" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=96FF752lGZQ" target="_blank">
+          <h3>
+            Movement Since 1630
+          </h3>
+        </a>
+        <b>Elizabeth A. Baker</b>
+        <p style="margin-bottom: 0;">
+          Sunday, All-Day Performance
+        </p>
+        <p>
+          <a href="https://soundcloud.com/co-incidence-festival/elizabeth-a-baker-movement-since-1630?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
+        </p>
+      </div>
+
+      <div class="col-lg-4">
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/yRz-WZRnupQ" frameborder="0" allowfullscreen></iframe>
+        <a href="https://www.youtube.com/watch?v=yRz-WZRnupQ" target="_blank">
+          <h3>
+            fragile being, hopeful becoming
+          </h3>
+        </a>
+        <b>Michael Pisaro</b>
+        <p style="margin-bottom: 0;">
+          Tuesday, Welcome to Boston Concert
+        </p>
+        <p>
+          <a href="https://soundcloud.com/co-incidence-festival/michael-pisaro-fragile-being-hopeful-becoming?in=co-incidence-festival/sets/2017-co-incidence-festival" class="reddish" target="_blank">
+            listen
+          </a>
         </p>
       </div>
     </div>
   </div>
-  <br />
-  <br />
-  <br />
   <br />
   <br />
   <br />
