--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,16 +17,20 @@
           <a class="page-scroll" href="#about">About</a>
         </li> -->
         <li>
-          <a class="page-scroll" href="#who">Details</a>
+          <a class="" href="2017-season">2017 SEASON</a>
         </li>
         <li>
-          <a class="page-scroll" href="#partners">COLLABORATORS</a>
+          <a class="page-scroll" href="/home/#describe">Details</a>
         </li>
         <li>
+          <a class="page-scroll" href="/home/#partners">COLLABORATORS</a>
+        </li>
+
+        <!-- <li>
           <a class="page-scroll" href="#application">GUEST ARTISTS</a>
-        </li>
+        </li> -->
         <li>
-          <a class="page-scroll" href="#about">about</a>
+          <a class="page-scroll" href="/home/#about">about</a>
         </li>
       </ul>
     </div>
