--- a/app/views/home/sections/_guest_artists.html.erb
+++ b/app/views/home/sections/_guest_artists.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-faded">
-          2017 ARTISTS
+          ARTISTS
         </h2>
       </div>
     </div>
