links and donate thing

--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -28,7 +28,15 @@
             </a>
             .
         </p>
+        <br />
+        <p>
+          If you would like to support <i> co-incidence </i> please donate to <a href="https://www.paypal.com/donate/?token=KoBqZhfEFBRTVp-JFxi4IsyrICQS9OzjvT8JP8kSDFZQxWOnqJIZKO-Rj1cqBl_3NlyD5G"> Non-Event </a> and include a note that you'd like your funds to help with the festival. 
+        </p>
+        <br />
+        <br />
       </div>
+      <br />
+      
       <div class="col-lg-4 col-lg-offset-4 text-center">
         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
         <p>Please feel free to reach out: <a href="mailto:coincidence.residency@gmail.com">coincidence.festival@gmail.com</a></p>
