--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -24,9 +24,17 @@
         <p class="text-faded">
           Please see a description of our collaborators, the application, and further details below.
         </p> -->
+
         <p class="text-faded">
           If you have any questions, please email us at: <a href="mailto:coincidence.residency@gmail.com">coincidence.festival@gmail.com</a>.
         </p>
+        <br />
+        <p class="text-faded">
+          <a href="/2017-season">
+            Check out some media from our 2017 season.
+          </a>
+        </p>
+        
       </div>
     </div>
   </div>
