new donate link

--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -30,7 +30,7 @@
         </p>
         <br />
         <p>
-          If you would like to support <i> co-incidence </i> please donate to <a href="https://www.paypal.com/donate/?token=KoBqZhfEFBRTVp-JFxi4IsyrICQS9OzjvT8JP8kSDFZQxWOnqJIZKO-Rj1cqBl_3NlyD5G"> Non-Event </a> and include a note that you'd like your funds to help with the festival. 
+          If you would like to support <i> co-incidence </i> please donate to <a href="http://nonevent.org/membership/" target="_blank"> Non-Event </a> and include a note that you'd like your funds to help with the festival. 
         </p>
         <br />
         <br />
