--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'home/sections/hero' %>
 <%= render 'home/sections/description' %>
+<%= render 'home/sections/intro2018' %>
 
 <%#= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
