--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
           <h4>
@@ -43,7 +43,7 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
           <h4>
@@ -62,7 +62,6 @@
           </p>
         </div>
       </div>
-      <!--
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
@@ -70,30 +69,32 @@
             Resident Artist
           </h4>
           <div class="details-pic">
-            <%#= image_tag asset_url("with_cocoa.jpg") %>
+            <%= image_tag asset_url("joachim.jpg") %>
           </div>
           <p class="text-muted partner-link">
-            <a href="http://michaelpisaro.blogspot.com//">
-              Michael Pisaro
+            <a href="http://www.heimart.at/index.php/joachim-eckl.html" target="_blank">
+              Joachim Eckl
             </a>
           </p>
           <p>
-            Michael Pisaro is an experimental composer and performer.
+            Based in Austria, Joachim Eckl was brought up in Haslach on the Große Mühl river. The relation to his country and culture as well as the local particularities became important for Eckl after returning from his studies in psychology in New York. Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water also plays a central role in this work: he understands and uses it as basic element of human interaction. Eckl currently works as a freelance artist under the label HEIM.ART® and runs “Die Station—Neufelden”, a former warehouse on the Große Mühl, as an art space.
           </p>
           --
           <p>
-            "As a composer, I am interested in challenging the ear. This is not in order to be difficult, but because I know that in meeting this challenge, the senses and the mind have the opportunity to experience the kind of joy discussed above. For this reason, my music focuses on a kind of listening which emphasizes the limits of perception: the tiny, practically inaudible variations of sound which occur in an apparently stable tone; the sometimes invisible border between sound an silence; the almost imperceptible sense of time passing; the infinitesimal difference between something which is almost simultaneous and something which is truly simultaneous. In this realm the senses become aware of how subtle they are, and if we succeed can make us feel lucky to be alive.”
+            <a href="/joachim">
+              Read More
+            </a>
           </p>
-          --
+          <!--
           <p>
             From
-            <a href="http://www.wandelweiser.de/_michael-pisaro/texts.html#HIT_OR_MISS"> 
-              Hit Or Miss
+            <a href="http://www.heimart.at/index.php/joachim-eckl.html"> 
+              Bio / Site
             </a>
           </p>
+          -->
         </div>
       </div>
-    -->
     </div>
   </div>
 </section>
